--- a/analysis/mutlivariate_EDA.Rmd
+++ b/analysis/mutlivariate_EDA.Rmd
@@ -45,43 +45,26 @@ e = est.ar.wge(data$gdp_change, p = 8, type = 'burg')
 * There may be seasonality of 6 which could be included in the VAR and MLR models
 
 # Plot all data
-```{r fig.width=10}
-df.m = reshape::melt(data %>% dplyr::select(-date) %>% dplyr::mutate(time = row_number()), id.vars = "time")
-ggplot(df.m) + 
-  facet_wrap(variable ~ ., ncol = 3, scales = 'free_y') + 
-  geom_line(aes(x = time, y = value, colour = variable))
 
+```{r}
+eda = MultivariateEDA$new(data = data, var_interest = "gdp_change", var_time = "date")
+```
+
+```{r fig.width=10}
+eda$plot_data(ncol = 3)
+```
+
+```{r fig.width=15, fig.height=15, message=FALSE}
+eda$plot_scatterplots()
 ```
 
 * Some of the variables are not stationary. This may be an issue for some of the models like VAR
 
 # CCF Analysis
+
 ```{r}
-
-var_interest = 'gdp_change'
-lag.max = 12
-max_ccf = lag.max
-
-results = tribble(~variable, ~max_ccf_index, ~max_ccf_value)
-for (name in colnames(data %>% dplyr::select(-date))){
-  if (name != var_interest){
-    # By convention, the X2 variable comes first
-    c = ccf(data[name], data[var_interest], lag.max = lag.max, plot = FALSE)
-    plot(c, main = paste("\nVariable: ", name, " , max cross-correlation @ at lag: ", max_ccf, sep = ""))
-    index = which(abs(c$acf[,1,1]) == max(abs(c$acf[,1,1])))
-    max_ccf_index = c$lag[,1,1][index] 
-    max_ccf_value = c$acf[,1,1][index]
-    
-    results = results %>% 
-      dplyr::add_row(variable = name, max_ccf_index = max_ccf_index, max_ccf_value = max_ccf_value)
-    cat(paste("\nFor variable: ", name, " , max cross-correlation is at lag: ", max_ccf_index, sep = ""))
-  }
-}
-
-results %>% 
-  dplyr::mutate(max_ccf_index_adjusted = ifelse(max_ccf_index > 0, 0, max_ccf_index)) %>% 
-  dplyr::arrange(desc(abs(max_ccf_value)))
-
+ccf_results = eda$plot_ccf_analysis(negative_only = TRUE)
+ccf_results
 ```
 
 # Lag Correlations
@@ -208,18 +191,15 @@ correlations %>%
 Subset to primary explanatory variables based on lagged cross-correlations.
 
 ```{r}
-dat <- data %>% dplyr::select(c(gdp_change, fedintrate, treas10yr, cpichg, popchg, ppichg, nfjobschg, unrate))
+dat <- data %>% dplyr::select(c(gdp_change, nfjobschg, ipichg, treas10yr, fedintrate, cpichg, inventorieschg, ppichg, popchg, homeownership, corpprofitchg, personincomechg, housingpermitschg))
 ```
 
 
 ## Plot Subset Data
 
-```{r fig.width=10}
-df.m = reshape::melt(dat %>% dplyr::mutate(time = row_number()), id.vars = "time")
-ggplot(df.m) + 
-  facet_wrap(variable ~ ., ncol = 3, scales = 'free_y') + 
-  geom_line(aes(x = time, y = value, colour = variable))
-
+```{r fig.height=15, fig.width=5}
+eda_subset = MultivariateEDA$new(data = dat, var_interest = "gdp_change")
+eda_subset$plot_data(ncol = 1)
 ```
 
 
@@ -233,8 +213,9 @@ dat.train <- dat[1:(end - shift), ]
 dat.test <- dat[ (end - shift + 1)  :195, ]
 
 VARselect(dat, lag.max = 16, type = "both")
-lsfit=VAR(dat,p=15,type="both")
-summary(lsfit)
+lsfit=VAR(dat, p=12, type="both")
+a = summary(lsfit)
+a$varresult$gdp_change
 AIC(lsfit)
 
 # check residuals on VAR model of gdp_change
